Fix dark mode for Client as well (duh)

--- a/Demo/BlazorFluentUI.Demo.Client/wwwroot/css/site.css
+++ b/Demo/BlazorFluentUI.Demo.Client/wwwroot/css/site.css
@@ -148,7 +148,7 @@ app {
 }
 
 .section {
-    background: #fff;
+    background: var(--semanticColors-BodyBackground);
     padding: 28px;
     margin-bottom: 28px;
     border-radius: 2px;
@@ -325,7 +325,7 @@ app {
 }
 
 .smallSubHeading, .subHeading {
-    color: #323130;
+    color: var(--semanticTextColors-BodyText);
     font-weight: 600;
     line-height: 1;
     margin-top: 0;
@@ -727,7 +727,7 @@ code {
 }
 .title {
     align-items: baseline;
-    color: rgb(50, 49, 48);
+    color: var(--semanticTextColors-BodyText);
     display: flex;
     font-size: 32px;
     font-weight: 600;
